--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <h1>Hellow word</h1>
-    <h2>副標題</h2>
+    <h2>副標題更新</h2>
     <link rel="stylesheet" href="all.css" />
   </head>
   <body></body>
