--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <h1>Hellow word</h1>
-    <h2>副標題更新</h2>
-    <p>第一個dev</p>
-    <p>第二個dev</p>
+    <h2>副標題更新2</h2>
+    1
     <link rel="stylesheet" href="all.css" />
   </head>
   <body></body>
